--- a/src/main/resources/templates/admin/types-input.html
+++ b/src/main/resources/templates/admin/types-input.html
@@ -50,7 +50,7 @@
 <!--中間內容-->
 <div class="m-container-small m-padded-tb-big ">
     <div class="ui container">
-        <form action="#" method="post" class="ui form">
+        <form action="#" method="post" th:action="@{/admin/types}" class="ui form">
             <div class="field">
                 <div class="ui left labeled input">
                     <label class="ui teal basic label">名稱</label>
@@ -64,7 +64,7 @@
 
             <div class="ui right aligned container">
                 <button type="button" class="ui button" onclick="window.history.go(-1)">返回</button>
-                <button class="ui teal button">提交</button>
+                <button class="ui teal submit button">提交</button>
             </div>
 
         </form>
