--- a/src/main/resources/templates/admin/types-input.html
+++ b/src/main/resources/templates/admin/types-input.html
@@ -41,8 +41,8 @@
 <div class="ui attached pointing menu">
     <div class="ui container">
         <div class="right menu">
-            <a href="#" class="teal active item">發布</a>
-            <a href="#" class="item">列表</a>
+            <a href="#" th:href="@{/admin/types/input}" class="active item">新增</a>
+            <a href="#" th:href="@{/admin/types}" class="teal item">列表</a>
         </div>
     </div>
 
@@ -50,17 +50,25 @@
 <!--中間內容-->
 <div class="m-container-small m-padded-tb-big ">
     <div class="ui container">
-        <form action="#" method="post" th:action="@{/admin/types}" class="ui form">
-            <div class="field">
+        <form action="#" method="post" th:object="${type}" th:action="*{id}==null ? @{/admin/types} : @{/admin/types/{id}(id=*{id})}" class="ui form">
+            <input type="hidden" name="id" th:value="*{id}">
+            <div class="required field">
                 <div class="ui left labeled input">
                     <label class="ui teal basic label">名稱</label>
-                    <input type="text" name="name" placeholder="分類名稱">
+                    <input type="text" name="name" placeholder="分類名稱" th:value="*{name}">
                 </div>
             </div>
 
 
-
             <div class="ui error message"></div>
+            <!--/*/
+            <div class="ui negative message" th:if="${#fields.hasErrors('name')}"  >
+                <i class="close icon"></i>
+                <div class="header">驗證失敗</div>
+                <p th:errors="*{name}">分類已存在</p>
+            </div>
+            /*/-->
+
 
             <div class="ui right aligned container">
                 <button type="button" class="ui button" onclick="window.history.go(-1)">返回</button>
@@ -121,7 +129,6 @@
     var contentEditor;
 
 
-
     $('.menu.toggle').click(function () {
         $('.m-item').toggleClass('m-mobile-hide');
     });
@@ -130,12 +137,12 @@
     ;
 
     $('.ui.form').form({
-        fields:{
-            title : {
-                identifier:'title',
-                rules:[{
-                    type : 'empty',
-                    prompt: '標題: 請輸入文章標題'
+        fields: {
+            title: {
+                identifier: 'name',
+                rules: [{
+                    type: 'empty',
+                    prompt: '請輸入分類名稱'
                 }]
             }
         }
