--- a/src/main/resources/templates/admin/types.html
+++ b/src/main/resources/templates/admin/types.html
@@ -40,8 +40,8 @@
 <div class="ui attached pointing menu">
     <div class="ui container">
         <div class="right menu">
-            <a href="#" class="item">發布</a>
-            <a href="#" class="teal active item">列表</a>
+            <a href="#" th:href="@{/admin/types/input}" class="item">新增</a>
+            <a href="#" th:href="@{/admin/types}" class="teal active item">列表</a>
         </div>
     </div>
 
@@ -49,7 +49,7 @@
 <!--中間內容-->
 <div class="m-container-small m-padded-tb-big ">
     <div class="ui container">
-
+        <div class="ui success message" th:unless="${#strings.isEmpty(message)}" th:text="${message}">恭喜，操作成功!</div>
 
 
         <table class="ui celled table">
