--- a/src/main/resources/templates/admin/_fragments.html
+++ b/src/main/resources/templates/admin/_fragments.html
@@ -25,8 +25,8 @@
             <div class="right m-item m-mobile-hide menu">
                 <div class="ui dropdown item">
                     <div class="text">
-                        <img class="ui avatar image" src="https://picsum.photos/100/100?image=1005">
-                        Jenny Hess
+                        <img class="ui avatar image" src="https://picsum.photos/100/100?image=1005" th:arc="@{${session.user.avatar}}">
+                        <span th:text="${session.user.nickname}">Jack</span>
                     </div>
                     <i class="dropdown icon"></i>
                     <div class="menu">
