--- a/src/main/resources/templates/admin/blogs.html
+++ b/src/main/resources/templates/admin/blogs.html
@@ -49,19 +49,22 @@
 <!--中間內容-->
 <div class="m-container-small m-padded-tb-big ">
     <div class="ui container">
-        <form action="#" method="post" class="ui segment form">
+        <div class="ui segment form">
+            <input type="hidden" name="page">
             <div class="inline fields">
                 <div class="field">
                     <input type="text" name="title" placeholder="標題">
                 </div>
                 <div class="field">
                     <div class="ui selection dropdown">
-                        <input type="hidden" name="type">
+                        <input type="hidden" name="typeId">
                         <i class="dropdown icon"></i>
                         <div class="default text">分類</div>
                         <div class="menu">
-                            <div class="item" data-value="1">錯誤日誌</div>
+                            <div th:each="type : ${types}" class="item" data-value="1" th:data-value="${type.id}" th:text="${type.name}">錯誤日誌</div>
+                            <!--/*-->
                             <div class="item" data-value="1">開發者手冊</div>
+                            <!--*/-->
                         </div>
                     </div>
                 </div>
@@ -73,13 +76,13 @@
                     </div>
                 </div>
                 <div class="field">
-                    <button class="ui mini teal basic button"><i class="search icon"></i>搜尋</button>
+                    <button type="button" id="search-btn" class="ui mini teal basic button"><i class="search icon"></i>搜尋</button>
                 </div>
             </div>
-        </form>
+        </div>
 
-
-        <table class="ui celled table">
+        <div id="table-container">
+            <table th:fragment="blogList" class="ui celled table">
             <thead>
                 <tr>
                     <th></th>
@@ -91,31 +94,31 @@
                 </tr>
             </thead>
             <tbody>
-            <tr>
-                <td>1</td>
-                <td>刻意練習清單</td>
-                <td>知識</td>
-                <td>是</td>
-                <td>2019-12-01 09:32</td>
+            <tr th:each="blog,iterStat : ${page.content}">
+                <td th:text="${iterStat.count}">1</td>
+                <td th:text="${blog.title}">刻意練習清單</td>
+                <td th:text="${blog.type.name}">知識</td>
+                <td th:text="${blog.recommend} ? '是' : '否'">是</td>
+                <td th:text="${blog.updateTime}">2019-12-01 09:32</td>
                 <td>
-                    <a href="#" class="ui mini basic teal button">編輯</a>
-                    <a href="#" class="ui mini basic red button">刪除</a>
+                    <a href="#" th:href="@{/admin/blogs/{id}/input(id=${blog.id})}" class="ui mini basic teal button">編輯</a>
+                    <a href="#" th:href="@{/admin/blogs/{id}/delete(id=${blog.id})}" class="ui mini basic red button">刪除</a>
                 </td>
             </tr>
             </tbody>
             <tfoot>
                 <tr>
                     <th colspan="6">
-                        <div class="ui mini pagination menu">
-                            <a class="item">上一頁</a>
-                            <a class="item">下一頁</a>
+                        <div class="ui mini pagination menu " th:if="${page.totalPages}>1">
+                            <a onclick="page(this)" th:attr="date-page=${page.number}-1)" class="item" th:unless="${page.first}">上一頁</a>
+                            <a onclick="page(this)" th:attr="date-page=${page.number}+1)" class="item" th:unless="${page.last}">下一頁</a>
                         </div>
                         <a href="#" class="ui teal mini basic right floated button">新增</a>
                     </th>
                 </tr>
             </tfoot>
         </table>
-
+        </div>
     </div>
 </div>
 
@@ -163,6 +166,24 @@
 
     $('.ui.dropdown').dropdown()
     ;
+
+    function page(obj) {
+        $("[name='page']").val($(obj).data("page"));
+        loaddata();
+    }
+
+    $("#search-btn").click(function(){
+        loaddata();
+    })
+
+    function loaddata() {
+        $("#table-container").load(/*[[@{/admin/blogs/search}]]*/"/admin/blogs/search",{
+            title : $("[name='title']").val(),
+            typeId : $("[name='typeId']").val(),
+            recommend : $("[name='recommend']").prop('checked'),
+            page : $("[name='page']").val()
+        });
+    }
 
 
 </script>
