--- a/src/main/resources/templates/admin/blogs-input.html
+++ b/src/main/resources/templates/admin/blogs-input.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:replace="admin/_fragments :: head(~{::title})">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog發布</title>
@@ -12,7 +12,7 @@
 
 <!--導航-->
 <!--inverted segment是黑色區塊-->
-<nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
+<nav th:replace="admin/_fragments :: menu(1)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
     <div class="ui container">
         <div class="ui inverted secondary stackable menu">
             <h2 class="ui teal header item">管理</h2>
@@ -50,8 +50,8 @@
 <!--中間內容-->
 <div class="m-container-small m-padded-tb-big ">
     <div class="ui container">
-        <form action="#" method="post" class="ui form">
-
+        <form id="blog-form" action="#" th:action="@{/admin/blogs}" method="post" class="ui form">
+            <input type="hidden" name="published">
             <div class="required field">
                 <div class="ui left labeled input">
                     <div class="ui selection compact teal basic dropdown label">
@@ -69,33 +69,24 @@
 
             </div>
 
-            <div class="field">
+            <div class="required field">
                 <div id="md-content" style="z-index: 1 !important;">
                     <textarea placeholder="Blog內容" name="content" style="display: none">
-                        [TOC]
 
-#### Disabled options
-
-- TeX (Based on KaTeX);
-- Emoji;
-- Task lists;
-- HTML tags decode;
-- Flowchart and Sequence Diagram;
                     </textarea>
                 </div>
             </div>
 
             <div class="two fields">
-                <div class="field">
+                <div class="required field">
                     <div class="ui left labeled action input">
                         <label class="ui compact teal basic label">分類</label>
                         <div class="ui fluid selection dropdown">
-                            <input type="hidden" name="type">
+                            <input type="hidden" name="type.id">
                             <i class="dropdown icon"></i>
                             <div class="default text">分類</div>
                             <div class="menu">
-                                <div class="item" data-value="1">錯誤日誌</div>
-                                <div class="item" data-value="2">開發者手冊</div>
+                                <div th:each="type : ${types}" class="item" data-value="1" th:data-value="${type.id}" th:text="${type.name}">錯誤日誌</div>
                             </div>
                         </div>
                     </div>
@@ -104,22 +95,21 @@
                     <div class="ui left labeled action input">
                         <label class="ui compact teal basic label">標籤</label>
                         <div class="ui fluid selection multiple search dropdown">
-                            <input type="hidden" name="tag">
+                            <input type="hidden" name="tagIds">
                             <i class="dropdown icon"></i>
                             <div class="default text">標籤</div>
                             <div class="menu">
-                                <div class="item" data-value="1">Java</div>
-                                <div class="item" data-value="2">JavaScript</div>
+                                <div th:each="tag : ${tags}" class="item" data-value="1" th:data-value="${tag.id}" th:text="${tag.name}">Java</div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="field">
+            <div class="required field">
                 <div class="ui left labeled input">
                     <label class="ui teal basic label">首圖</label>
-                    <input type="text" name="indexPicture" placeholder="首圖引用地址">
+                    <input type="text" name="firstPicture" placeholder="首圖引用地址">
                 </div>
             </div>
 
@@ -132,8 +122,8 @@
                 </div>
                 <div class="field">
                     <div class="ui checkbox">
-                        <input type="checkbox" id="shareInfo" name="shareInfo" class="hidden">
-                        <label for="shareInfo">轉載聲明</label>
+                        <input type="checkbox" id="shareStatement" name="shareStatement" class="hidden">
+                        <label for="shareStatement">轉載聲明</label>
                     </div>
                 </div>
                 <div class="field">
@@ -144,8 +134,8 @@
                 </div>
                 <div class="field">
                     <div class="ui checkbox">
-                        <input type="checkbox" id="comment" name="comment" class="hidden">
-                        <label for="comment">評論</label>
+                        <input type="checkbox" id="commentabled" name="commentabled" class="hidden">
+                        <label for="commentabled">評論</label>
                     </div>
                 </div>
             </div>
@@ -154,8 +144,8 @@
 
             <div class="ui right aligned container">
                 <button type="button" class="ui button" onclick="window.history.go(-1)">返回</button>
-                <button class="ui secondary button">保存</button>
-                <button class="ui teal button">發布</button>
+                <button type="button" id="save-btn" class="ui secondary button">保存</button>
+                <button type="button" id="publish-btn" class="ui teal button">發布</button>
             </div>
 
         </form>
@@ -164,7 +154,7 @@
 </div>
 
 <!--底部footer-->
-<footer class="ui inverted vertical segment m-padded-tb-massive">
+<footer th:replace="admin/_fragments :: footer"  class="ui inverted vertical segment m-padded-tb-massive">
     <div class="ui center aligned container">
         <div class="ui inverted divided stackable grid">
             <div class="three wide column"></div>
@@ -195,10 +185,11 @@
     </div>
 </footer>
 
-
+<!--/*/<th:block th:replace="_fragments :: script">/*/-->
 <script src=" https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
 <script src="../../static/lib/editormd/editormd.min.js"></script>
+<!--/*/</th:block>/*/-->
 <script>
     var contentEditor;
 
@@ -208,7 +199,8 @@
             width   : "100%",
             height  : 640,
             syncScrolling : "single",
-            path    : "../static/lib/editormd/lib/"
+            // path    : "../static/lib/editormd/lib/"
+            path    : "/lib/editormd/lib/"
         });
 
 
@@ -221,6 +213,18 @@
     $('.ui.dropdown').dropdown()
     ;
 
+    $('#save-btn').click(function () {
+        $('[name="published"]').val(false);
+        $('#blog-form').submit();
+    });
+
+    $('#publish-btn').click(function () {
+        $('[name="published"]').val(true);
+        $('#blog-form').submit();
+    });
+
+
+
     $('.ui.form').form({
         fields:{
             title : {
@@ -229,9 +233,32 @@
                     type : 'empty',
                     prompt: '標題: 請輸入文章標題'
                 }]
+            },
+            content : {
+                identifier:'content',
+                rules:[{
+                    type : 'empty',
+                    prompt: '標題: 請輸入blog內容'
+                }]
+            },
+            typeId : {
+                identifier:'typeId',
+                rules:[{
+                    type : 'empty',
+                    prompt: '標題: 請輸入blog分類'
+                }]
+            },
+            firstPicture : {
+                identifier:'firstPicture',
+                rules:[{
+                    type : 'empty',
+                    prompt: '標題: 請輸入blog分類首圖'
+                }]
             }
         }
     });
+
+
 
 </script>
 
