--- a/src/main/resources/templates/admin/blogs-input.html
+++ b/src/main/resources/templates/admin/blogs-input.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <link rel="stylesheet" href="../../static/lib/editormd/css/editormd.min.css">
     <link rel="stylesheet" href="../../static/css/me.css">
+
 </head>
 <body>
 
@@ -48,7 +49,7 @@
 
 </div>
 <!--中間內容-->
-<div class="m-container-small m-padded-tb-big ">
+<div class="m-container m-padded-tb-big ">
     <div class="ui container">
         <form id="blog-form" action="#" th:action="@{/admin/blogs}" method="post" class="ui form">
             <input type="hidden" name="published">
@@ -71,11 +72,11 @@
 
             <div class="required field">
                 <div id="md-content" style="z-index: 1 !important;">
-                    <textarea placeholder="Blog內容" name="content" style="display: none">
-
-                    </textarea>
+                    <textarea placeholder="Blog內容" name="content" style="display: none"></textarea>
                 </div>
             </div>
+
+
 
             <div class="two fields">
                 <div class="required field">
@@ -86,7 +87,9 @@
                             <i class="dropdown icon"></i>
                             <div class="default text">分類</div>
                             <div class="menu">
-                                <div th:each="type : ${types}" class="item" data-value="1" th:data-value="${type.id}" th:text="${type.name}">錯誤日誌</div>
+                                <div th:each="type : ${types}" class="item" data-value="1" th:data-value="${type.id}"
+                                     th:text="${type.name}">錯誤日誌
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -99,7 +102,9 @@
                             <i class="dropdown icon"></i>
                             <div class="default text">標籤</div>
                             <div class="menu">
-                                <div th:each="tag : ${tags}" class="item" data-value="1" th:data-value="${tag.id}" th:text="${tag.name}">Java</div>
+                                <div th:each="tag : ${tags}" class="item" data-value="1" th:data-value="${tag.id}"
+                                     th:text="${tag.name}">Java
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -154,7 +159,7 @@
 </div>
 
 <!--底部footer-->
-<footer th:replace="admin/_fragments :: footer"  class="ui inverted vertical segment m-padded-tb-massive">
+<footer th:replace="admin/_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
     <div class="ui center aligned container">
         <div class="ui inverted divided stackable grid">
             <div class="three wide column"></div>
@@ -185,25 +190,21 @@
     </div>
 </footer>
 
-<!--/*/<th:block th:replace="_fragments :: script">/*/-->
-<script src=" https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
-<script src="../../static/lib/editormd/editormd.min.js"></script>
+<!--/*/<th:block th:replace="admin/_fragments :: script">/*/-->
+
 <!--/*/</th:block>/*/-->
+
 <script>
+    //初始化Markdown编辑器
     var contentEditor;
-
-    //初始化Markdown編輯器
-    $(function() {
+    $(function () {
         contentEditor = editormd("md-content", {
-            width   : "100%",
-            height  : 640,
-            syncScrolling : "single",
-            // path    : "../static/lib/editormd/lib/"
-            path    : "/lib/editormd/lib/"
+            width: "100%",
+            height: 640,
+            syncScrolling: "single",
+//        path    : "../static/lib/editormd/lib/"
+            path: "/lib/editormd/lib/"
         });
-
-
     });
 
     $('.menu.toggle').click(function () {
@@ -224,40 +225,38 @@
     });
 
 
-
     $('.ui.form').form({
-        fields:{
-            title : {
-                identifier:'title',
-                rules:[{
-                    type : 'empty',
+        fields: {
+            title: {
+                identifier: 'title',
+                rules: [{
+                    type: 'empty',
                     prompt: '標題: 請輸入文章標題'
                 }]
             },
-            content : {
-                identifier:'content',
-                rules:[{
-                    type : 'empty',
+            content: {
+                identifier: 'content',
+                rules: [{
+                    type: 'empty',
                     prompt: '標題: 請輸入blog內容'
                 }]
             },
-            typeId : {
-                identifier:'typeId',
-                rules:[{
-                    type : 'empty',
+            typeId: {
+                identifier: 'typeId',
+                rules: [{
+                    type: 'empty',
                     prompt: '標題: 請輸入blog分類'
                 }]
             },
-            firstPicture : {
-                identifier:'firstPicture',
-                rules:[{
-                    type : 'empty',
+            firstPicture: {
+                identifier: 'firstPicture',
+                rules: [{
+                    type: 'empty',
                     prompt: '標題: 請輸入blog分類首圖'
                 }]
             }
         }
     });
-
 
 
 </script>
