--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,7 +54,7 @@
                 <!--content-->
                 <div class="ui attached segment">
                     <div class="ui padded vertical segment m-padded-tb-large">
-                        <div class="ui mobile reversed stackable grid">
+                        <div class="ui middle aligned mobile reversed stackable grid">
                             <div class="ui eleven wide column">
                                 <h3 class="ui header">納豆快追到費爸了（？）</h3>
                                 <p class="m-text">其實我以前很討厭納豆
