--- a/src/main/resources/templates/admin/blogs-input.html
+++ b/src/main/resources/templates/admin/blogs-input.html
@@ -43,7 +43,7 @@
     <div class="ui container">
         <div class="right menu">
             <a href="#" class="teal active item">發布</a>
-            <a href="#" class="item">列表</a>
+            <a href="#" th:href="@{/admin/blogs}"  class="teal item">列表</a>
         </div>
     </div>
 
@@ -51,12 +51,13 @@
 <!--中間內容-->
 <div class="m-container m-padded-tb-big ">
     <div class="ui container">
-        <form id="blog-form" action="#" th:action="@{/admin/blogs}" method="post" class="ui form">
+        <form id="blog-form" action="#" th:object="${blog}" th:action="@{/admin/blogs}" method="post" class="ui form">
             <input type="hidden" name="published">
+            <input type="hidden" name="id" th:value="*{id}">
             <div class="required field">
                 <div class="ui left labeled input">
                     <div class="ui selection compact teal basic dropdown label">
-                        <input type="hidden" value="原創">
+                        <input type="hidden" value="原創" name="flag" th:value="*{flag}">
                         <i class="dropdown icon"></i>
                         <div class="text">原創</div>
                         <div class="menu">
@@ -65,14 +66,14 @@
                             <div class="item" default-value="翻譯">翻譯</div>
                         </div>
                     </div>
-                    <input type="text" name="title" placeholder="標題">
+                    <input type="text" name="title" placeholder="標題" th:value="*{title}">
                 </div>
 
             </div>
 
             <div class="required field">
                 <div id="md-content" style="z-index: 1 !important;">
-                    <textarea placeholder="Blog內容" name="content" style="display: none"></textarea>
+                    <textarea placeholder="Blog內容" name="content" style="display: none" th:text="*{content}"></textarea>
                 </div>
             </div>
 
@@ -83,7 +84,7 @@
                     <div class="ui left labeled action input">
                         <label class="ui compact teal basic label">分類</label>
                         <div class="ui fluid selection dropdown">
-                            <input type="hidden" name="type.id">
+                            <input type="hidden" name="type.id" th:value="*{type}!=null ? *{type.id}">
                             <i class="dropdown icon"></i>
                             <div class="default text">分類</div>
                             <div class="menu">
@@ -98,7 +99,7 @@
                     <div class="ui left labeled action input">
                         <label class="ui compact teal basic label">標籤</label>
                         <div class="ui fluid selection multiple search dropdown">
-                            <input type="hidden" name="tagIds">
+                            <input type="hidden" name="tagIds" th:value="*{tagIds}">
                             <i class="dropdown icon"></i>
                             <div class="default text">標籤</div>
                             <div class="menu">
@@ -111,36 +112,36 @@
                 </div>
             </div>
 
-            <div class="required field">
+            <div class="field">
                 <div class="ui left labeled input">
                     <label class="ui teal basic label">首圖</label>
-                    <input type="text" name="firstPicture" placeholder="首圖引用地址">
+                    <input type="text" name="firstPicture" th:value="*{firstPicture}" placeholder="首圖引用地址">
                 </div>
             </div>
 
             <div class="inline fields">
                 <div class="field">
                     <div class="ui checkbox">
-                        <input type="checkbox" id="recommend" name="recommend" checked class="hidden">
+                        <input type="checkbox" id="recommend" name="recommend" th:checked="*{recommend}" checked class="hidden">
                         <label for="recommend">推薦</label>
                     </div>
                 </div>
                 <div class="field">
                     <div class="ui checkbox">
-                        <input type="checkbox" id="shareStatement" name="shareStatement" class="hidden">
+                        <input type="checkbox" id="shareStatement" name="shareStatement" th:checked="*{shareStatement}" class="hidden">
                         <label for="shareStatement">轉載聲明</label>
                     </div>
                 </div>
                 <div class="field">
                     <div class="ui checkbox">
-                        <input type="checkbox" id="appreciation" name="appreciation" class="hidden">
+                        <input type="checkbox" id="appreciation" name="appreciation" th:checked="*{appreciation}" class="hidden">
                         <label for="appreciation">讚賞</label>
                     </div>
                 </div>
                 <div class="field">
                     <div class="ui checkbox">
-                        <input type="checkbox" id="commentabled" name="commentabled" class="hidden">
-                        <label for="commentabled">評論</label>
+                        <input type="checkbox" id="commentTable" name="commentTable" th:checked="*{commentTable}" class="hidden">
+                        <label for="commentTable">評論</label>
                     </div>
                 </div>
             </div>
@@ -242,17 +243,10 @@
                 }]
             },
             typeId: {
-                identifier: 'typeId',
+                identifier: 'type.id',
                 rules: [{
                     type: 'empty',
                     prompt: '標題: 請輸入blog分類'
-                }]
-            },
-            firstPicture: {
-                identifier: 'firstPicture',
-                rules: [{
-                    type: 'empty',
-                    prompt: '標題: 請輸入blog分類首圖'
                 }]
             }
         }
