--- a/src/main/resources/static/css/me.css
+++ b/src/main/resources/static/css/me.css
@@ -168,6 +168,11 @@ body {
     color: #333 !important;
 }
 
+.m-teal {
+    color: #0085AD !important;
+}
+
+
 .m-mobile-show {
     display: none !important;
 }
