--- a/src/main/resources/templates/admin/_fragments.html
+++ b/src/main/resources/templates/admin/_fragments.html
@@ -57,11 +57,10 @@
                 </div>
             </div>
             <div class="three wide column">
-                <h4 class="ui inverted header">最新blog</h4>
+                <h4 class="ui inverted header">聯絡我</h4>
                 <div class="ui inverted link list">
-                    <a href="#" class="item">第一行</a>
-                    <a href="#" class="item">第二行</a>
-                    <a href="#" class="item">第三行</a>
+                    <a href="#" class="item" th:text="#{index.email}">Email: asdfjack123@gmail.com</a>
+                    <a href="#" class="item">0911234567</a>
                 </div>
             </div>
             <div class="seven wide column">
