--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -50,18 +50,18 @@
             <div class="three wide column"></div>
             <div class="three wide column">
                 <h4 class="ui inverted header">最新blog</h4>
-                <div class="ui inverted link list">
-                    <a href="#" class="item">第一行</a>
-                    <a href="#" class="item">第二行</a>
-                    <a href="#" class="item">第三行</a>
+                <div id="newblog-container">
+                    <div class="ui inverted link list" th:fragment="newblogList">
+                        <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="item"
+                           th:each="blog : ${newblogs}" th:text="${blog.title}">第一行</a>
+                    </div>
                 </div>
             </div>
             <div class="three wide column">
-                <h4 class="ui inverted header">最新blog</h4>
+                <h4 class="ui inverted header">聯絡我</h4>
                 <div class="ui inverted link list">
-                    <a href="#" class="item">第一行</a>
-                    <a href="#" class="item">第二行</a>
-                    <a href="#" class="item">第三行</a>
+                    <a href="#" class="item" th:text="#{index.email}">Email: asdfjack123@gmail.com</a>
+                    <a href="#" class="item">0911234567</a>
                 </div>
             </div>
             <div class="seven wide column">
@@ -81,6 +81,9 @@
     <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
     <script src="../static/lib/prism/prism.js" th:src="@{/lib/prism/prism.js}"></script>
     <script src="../static/lib/tocbot/tocbot.min.js" th:src="@{/lib/tocbot/tocbot.min.js}"></script>
+    <script>
+        $('#newblog-container').load(/*[[@{/footer/newblog}]]*/"/footer/newblog");
+    </script>
 </th:block>
 
 
