--- a/src/main/resources/templates/archives.html
+++ b/src/main/resources/templates/archives.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:replace="_fragments :: head(~{::title})">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>歸檔</title>
@@ -11,7 +11,7 @@
 
 <!--導航-->
 <!--inverted segment是黑色區塊-->
-<nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
+<nav th:replace="_fragments :: menu(4)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
     <div class="ui container">
         <div class="ui inverted secondary stackable menu">
             <h2 class="ui teal header item">Blog</h2>
@@ -43,106 +43,28 @@
                     <h3 class="ui teal header">歸檔</h3>
                 </div>
                 <div class="right aligned column">
-                    共 <h3 class="ui orange header m-inline-block m-text-thin"> 111 </h3> 篇文章
+                    共 <h3 class="ui orange header m-inline-block m-text-thin" th:text="${blogCount}"> 111 </h3> 篇文章
                 </div>
             </div>
         </div>
 
-        <h2 class="ui center aligned header">2019</h2>
-        <div class="ui fluid vertical menu">
-            <a href="#" target="_blank" class="item">
+        <th:block th:each="item : ${archiveMap}">
+            <h2 class="ui center aligned header" th:text="${item.key}">2019</h2>
+            <div class="ui fluid vertical menu">
+                <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="item" th:each="blog : ${item.value}">
                 <span>
-                    <i class="teal circle icon"></i>關於刻意練習的清單
-                    <div class="ui teal basic left pointing label m-padded-mini">9月03</div>
+                    <i class="teal circle icon"></i><span th:text="${blog.title}">關於刻意練習的清單</span>
+                    <div class="ui teal basic left pointing label m-padded-mini" th:text="${#dates.format(blog.updateTime,'MMMdd')}">9月03</div>
                 </span>
-                <div class="ui orange basic left pointing label m-padded-mini">原創</div>
-            </a>
-            <a href="#" target="_blank" class="item">
-                <span>
-                    <i class="teal circle icon"></i>關於刻意練習的清單
-                    <div class="ui teal basic left pointing label m-padded-mini">9月03</div>
-                </span>
-                <div class="ui orange basic left pointing label m-padded-mini">原創</div>
-            </a>
-            <a href="#" target="_blank" class="item">
-                <span>
-                    <i class="teal circle icon"></i>關於刻意練習的清單
-                    <div class="ui teal basic left pointing label m-padded-mini">9月03</div>
-                </span>
-                <div class="ui orange basic left pointing label m-padded-mini">原創</div>
-            </a>
-            <a href="#" target="_blank" class="item">
-                <span>
-                    <i class="teal circle icon"></i>關於刻意練習的清單
-                    <div class="ui teal basic left pointing label m-padded-mini">9月03</div>
-                </span>
-                <div class="ui orange basic left pointing label m-padded-mini">原創</div>
-            </a>
-            <a href="#" target="_blank" class="item">
-                <span>
-                    <i class="teal circle icon"></i>關於刻意練習的清單
-                    <div class="ui teal basic left pointing label m-padded-mini">9月03</div>
-                </span>
-                <div class="ui orange basic left pointing label m-padded-mini">原創</div>
-            </a>
-            <a href="#" target="_blank" class="item">
-                <span>
-                    <i class="teal circle icon"></i>關於刻意練習的清單
-                    <div class="ui teal basic left pointing label m-padded-mini">9月03</div>
-                </span>
-                <div class="ui orange basic left pointing label m-padded-mini">原創</div>
-            </a>
-        </div>
-        <h2 class="ui center aligned header">2018</h2>
-        <div class="ui fluid vertical menu">
-            <a href="#" target="_blank" class="item">
-                <span>
-                    <i class="teal circle icon"></i>關於刻意練習的清單
-                    <div class="ui teal basic left pointing label m-padded-mini">9月03</div>
-                </span>
-                <div class="ui orange basic left pointing label m-padded-mini">原創</div>
-            </a>
-            <a href="#" target="_blank" class="item">
-                <span>
-                    <i class="teal circle icon"></i>關於刻意練習的清單
-                    <div class="ui teal basic left pointing label m-padded-mini">9月03</div>
-                </span>
-                <div class="ui orange basic left pointing label m-padded-mini">原創</div>
-            </a>
-            <a href="#" target="_blank" class="item">
-                <span>
-                    <i class="teal circle icon"></i>關於刻意練習的清單
-                    <div class="ui teal basic left pointing label m-padded-mini">9月03</div>
-                </span>
-                <div class="ui orange basic left pointing label m-padded-mini">原創</div>
-            </a>
-            <a href="#" target="_blank" class="item">
-                <span>
-                    <i class="teal circle icon"></i>關於刻意練習的清單
-                    <div class="ui teal basic left pointing label m-padded-mini">9月03</div>
-                </span>
-                <div class="ui orange basic left pointing label m-padded-mini">原創</div>
-            </a>
-            <a href="#" target="_blank" class="item">
-                <span>
-                    <i class="teal circle icon"></i>關於刻意練習的清單
-                    <div class="ui teal basic left pointing label m-padded-mini">9月03</div>
-                </span>
-                <div class="ui orange basic left pointing label m-padded-mini">原創</div>
-            </a>
-            <a href="#" target="_blank" class="item">
-                <span>
-                    <i class="teal circle icon"></i>關於刻意練習的清單
-                    <div class="ui teal basic left pointing label m-padded-mini">9月03</div>
-                </span>
-                <div class="ui orange basic left pointing label m-padded-mini">原創</div>
-            </a>
-        </div>
+                    <div class="ui orange basic left pointing label m-padded-mini" th:text="${blog.flag}">原創</div>
+                </a>
+            </div>
+        </th:block>
     </div>
 </div>
 
 <!--底部footer-->
-<footer class="ui inverted vertical segment m-padded-tb-massive">
+<footer th:replace="_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
     <div class="ui center aligned container">
         <div class="ui inverted divided stackable grid">
             <div class="three wide column"></div>
@@ -173,10 +95,10 @@
     </div>
 </footer>
 
-
+<!--/*/<th:block th:replace="_fragments :: script">/*/-->
 <script src=" https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
-
+<!--/*/</th:block>/*/-->
 <script>
     $('.menu.toggle').click(function () {
         $('.m-item').toggleClass('m-mobile-hide');
