--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -483,7 +483,7 @@ h5,h6{font-size:1em;}
             </div>
         </div>
 
-        <div class="ui bottom attached segment">
+        <div class="ui bottom attached segment" th:if="${blog.commentTable}">
             <!--留言區域列表-->
             <div id="comment-container" class="ui teal segment">
                 <div th:fragment="commentList">
