--- a/src/main/resources/templates/admin/blogs-input.html
+++ b/src/main/resources/templates/admin/blogs-input.html
@@ -115,7 +115,7 @@
             <div class="field">
                 <div class="ui left labeled input">
                     <label class="ui teal basic label">首圖</label>
-                    <input type="text" name="firstPicture" th:value="*{firstPicture}" placeholder="首圖引用地址">
+                    <input type="text" name="firstPicture" th:value="*{firstPicture}" value="https://picsum.photos/id/1/800/450" placeholder="首圖引用地址">
                 </div>
             </div>
 
