--- a/src/main/resources/templates/admin/_fragments.html
+++ b/src/main/resources/templates/admin/_fragments.html
@@ -31,7 +31,7 @@
                     </div>
                     <i class="dropdown icon"></i>
                     <div class="menu">
-                        <a href="#" th:href="@{/admin/blogs}" class="item">管理</a>
+                        <a href="#" th:href="@{/}" class="item">首頁</a>
                         <a href="#" th:href="@{/admin/logout}" class="item">登出</a>
                     </div>
                 </div>
