--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -48,34 +48,10 @@
                     <p class="m-text">張為傑，一位社會新鮮人，折騰在0和1的世界中</p>
                     <p class="m-text">熱愛coding，正在探索高效率學習的方法</p>
                 </div>
-                <div class="ui attached segment">
-                    <div class="ui orange basic left pointing label">coding</div>
-                    <div class="ui orange basic left pointing label">寫作</div>
-                    <div class="ui orange basic left pointing label">思考</div>
-                    <div class="ui orange basic left pointing label">運動</div>
-                </div>
-
-                <div class="ui attached segment">
-                    <div class="ui teal basic left pointing label m-margin-tb-tiny">Java</div>
-                    <div class="ui teal basic left pointing label m-margin-tb-tiny">SQL</div>
-                    <div class="ui teal basic left pointing label m-margin-tb-tiny">C++</div>
-                    <div class="ui teal basic left pointing label m-margin-tb-tiny">Java</div>
-                    <div class="ui teal basic left pointing label m-margin-tb-tiny">SQL</div>
-                    <div class="ui teal basic left pointing label m-margin-tb-tiny">C++</div>
-                    <div class="ui teal basic left pointing label m-margin-tb-tiny">Java</div>
-                    <div class="ui teal basic left pointing label m-margin-tb-tiny">SQL</div>
-                    <div class="ui teal basic left pointing label m-margin-tb-tiny">C++</div>
-                </div>
 
                 <div class="ui bottom attached segment">
-                    <a href="#" class="ui circular icon  button"><i class="github icon"></i></a>
-                    <a href="#" class="ui wechat circular icon  button"><i class="weixin icon"></i></a>
-                    <a href="#" class="ui qq circular icon  button" data-content="123123123" data-position="bottom center"><i class="qq icon"></i></a>
+                    <a href="https://github.com/asdfjack123" target="_blank"  class="ui circular icon  button"><i class="github icon"></i></a>
                 </div>
-                <div class="ui wechat-qr flowing popup transition hidden">
-                    <img src="../static/images/123.jpg" alt="" class="ui rounded image" style="width: 100px">
-                </div>
-
 
             </div>
         </div>
