--- a/src/main/resources/templates/admin/_fragments.html
+++ b/src/main/resources/templates/admin/_fragments.html
@@ -67,7 +67,7 @@
             <div class="seven wide column">
                 <h4 class="ui inverted header">關於我</h4>
                 <p>
-                    這是我的個人blog這是我的個人blog這是我的個人blog這是我的個人blog這是我的個人blog這是我的個人blog這是我的個人blog這是我的個人blog這是我的個人blog這是我的個人blog</p>
+                    這是我的個人blog</p>
             </div>
         </div>
         <div class="ui inverted section divider"></div>
