--- a/src/main/resources/templates/admin/blogs-input.html
+++ b/src/main/resources/templates/admin/blogs-input.html
@@ -57,7 +57,7 @@
             <div class="required field">
                 <div class="ui left labeled input">
                     <div class="ui selection compact teal basic dropdown label">
-                        <input type="hidden" value="原創" name="flag" th:value="*{flag}">
+                        <input type="hidden" value="原創" name="flag" th:value="*{flag} == null ? '原創' : *{flag}">
                         <i class="dropdown icon"></i>
                         <div class="text">原創</div>
                         <div class="menu">
@@ -115,7 +115,7 @@
             <div class="field">
                 <div class="ui left labeled input">
                     <label class="ui teal basic label">首圖</label>
-                    <input type="text" name="firstPicture" th:value="*{firstPicture}" value="https://picsum.photos/id/1/800/450" placeholder="首圖引用地址">
+                    <input type="text" name="firstPicture" th:value="*{firstPicture}==null ? 'https://picsum.photos/id/1/800/450' : *{firstPicture}" placeholder="首圖引用地址">
                 </div>
             </div>
 
