--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -41,20 +41,34 @@
 <div class="m-container-small m-padded-tb-big animated fadeIn">
     <div class="ui container">
         <div class="ui attached segment">
-            <div class="ui horizontal link list">
-                <div class="item">
-                    <img src="https://picsum.photos/100/100?image=1005" th:src="@{${blog.user.avatar}}" alt=""
-                         class="ui avatar image">
-                    <div class="content"><a href="#" class="header" th:text="${blog.user.nickname}">張為傑</a></div>
+            <div class="ui two column grid">
+                <div class="column">
+                    <div class="ui horizontal link list">
+                        <div class="item">
+                            <img src="https://picsum.photos/100/100?image=1005" th:src="@{${blog.user.avatar}}" alt=""
+                                 class="ui avatar image">
+                            <div class="content"><a href="#" class="header" th:text="${blog.user.nickname}">張為傑</a>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <i class="calendar icon"></i><span th:text="${#dates.format(blog.updateTime,'yyyy-MM-dd')}"> 2019-11-28</span>
+                        </div>
+                        <div class="item">
+                            <i class="eye icon"></i><span th:text="${blog.views}"> 190</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="item">
-                    <i class="calendar icon"></i><span th:text="${#dates.format(blog.updateTime,'yyyy-MM-dd')}"> 2019-11-28</span>
-                </div>
-                <div class="item">
-                    <i class="eye icon"></i><span th:text="${blog.views}"> 190</span>
+                <div class="right aligned column" th:if="${session.user} != null">
+                    <a href="#" th:href="@{/admin/blogs/{id}/input(id=${blog.id})}"
+                       class="ui mini basic teal button">編輯</a>
+                    <a href="#" th:href="@{/admin/blogs/{id}/delete(id=${blog.id})}"
+                       class="ui mini basic red button">刪除</a>
                 </div>
             </div>
+
         </div>
+
+
         <div class="ui attached segment">
             <!--圖片區域-->
             <img src="https://picsum.photos/800/450?image=1005" th:src="@{${blog.firstPicture}}" alt=""
@@ -494,9 +508,11 @@ h5,h6{font-size:1em;}
                                 <img src="https://picsum.photos/100/100?image=1005" th:src="@{${comment.avatar}}">
                             </a>
                             <div class="content">
-                                <a class="author" >
+                                <a class="author">
                                     <span th:text="${comment.nickname}">Matt</span>
-                                    <div class="ui mini basic teal left pointing label m-padded-mini" th:if="${comment.adminComment}">管理員</div>
+                                    <div class="ui mini basic teal left pointing label m-padded-mini"
+                                         th:if="${comment.adminComment}">管理員
+                                    </div>
                                 </a>
                                 <div class="metadata">
                                     <span class="date"
@@ -518,9 +534,11 @@ h5,h6{font-size:1em;}
                                              th:src="@{${reply.avatar}}">
                                     </a>
                                     <div class="content">
-                                        <a class="author" >
+                                        <a class="author">
                                             <span th:text="${reply.nickname}">小紅</span>
-                                            <div class="ui mini basic teal left pointing label m-padded-mini" th:if="${reply.adminComment}">管理員</div>
+                                            <div class="ui mini basic teal left pointing label m-padded-mini"
+                                                 th:if="${reply.adminComment}">管理員
+                                            </div>
                                             &nbsp;<span th:text="| @${reply.parentComment.nickname}|" class="m-teal">@ 小白</span>
                                         </a>
                                         <div class="metadata">
@@ -573,13 +591,15 @@ h5,h6{font-size:1em;}
                     <div class="field m-mobile-wide m-margin-bottom-small">
                         <div class="ui left icon input">
                             <i class="user icon"></i>
-                            <input type="text" name="nickname" placeholder="姓名" th:value="${session.user}!=null ? ${session.user.nickname}">
+                            <input type="text" name="nickname" placeholder="姓名"
+                                   th:value="${session.user}!=null ? ${session.user.nickname}">
                         </div>
                     </div>
                     <div class="field m-mobile-wide m-margin-bottom-small">
                         <div class="ui left icon input">
                             <i class="mail icon"></i>
-                            <input type="text" name="email" placeholder="信箱" th:value="${session.user}!=null ? ${session.user.email}">
+                            <input type="text" name="email" placeholder="信箱"
+                                   th:value="${session.user}!=null ? ${session.user.email}">
                         </div>
                     </div>
                     <div class="field m-margin-bottom-small m-mobile-wide">
