--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -80,13 +80,12 @@
                 <h4 class="ui inverted header">聯絡我</h4>
                 <div class="ui inverted link list">
                     <a href="#" class="item" th:text="#{index.email}">Email: asdfjack123@gmail.com</a>
-                    <a href="#" class="item">0911234567</a>
                 </div>
             </div>
             <div class="seven wide column">
                 <h4 class="ui inverted header">關於我</h4>
                 <p>
-                    這是我的個人blog這是我的個人blog這是我的個人blog這是我的個人blog這是我的個人blog這是我的個人blog這是我的個人blog這是我的個人blog這是我的個人blog這是我的個人blog</p>
+                    這是我的個人blog</p>
             </div>
         </div>
         <div class="ui inverted section divider"></div>
